[package]
name = "fft_player"
version = "0.1.0"
authors = ["teunreyniers <teun.reyniers@hotmail.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "3.0.1"
gnuplot = "0.0.33"
args = "2.0"
getopts = "0.2"
itertools = "0.8"